TheMightyDude (01 June 2013)
--------------------------------------
Fixed PHP Notice: Undefined variable: ships in includes/ibank_transfer.php on line 54
Fixed PHP Warning: Invalid argument supplied for foreach() in includes/ibank_transfer.php on line 54
Fixed PHP Notice: Undefined variable: creator in teams.php on line 268
Fixed Score Issue from capping to 2,147,483,648 score in the ships table needs to be BIGINT 64bits.

TheKabal (30 May 2013)
--------------------------------------
Fixes to move Sol from 0 to 1, including languages and rsmove.

TheKabal (27 May 2013)
--------------------------------------
Fixes to scheduler to make them run correctly (even in PGSQL). Not the ideal solution, but works for now.

TheKabal (25 May 2013)
--------------------------------------
Error management - Throw (and catch) exception in BntSmarty if the template _cache or _compile directories are not writable (or the system won't work for some other reason).
Create universe - Initial (step 0) gives feedback if you enter the wrong password
Create universe - Steps after 0 includes the submit button in the table
Create universe - Warning message should be above (not below) the confirm in step 2
Create universe - All output is now language file driven (translatable)
Create universe - Steps 6 and 7 have benchmark timings for all items
Create universe - Initial (step 0) should show same table based design

TheKabal (19 May 2013)
--------------------------------------
Create Universe step 5 & 6 translation

TheKabal (19 May 2013)
--------------------------------------
Fix BntSchema so that it returns an array only (no direct output)
Fix Create universe output function table_row & table_row_xml to correctly show the full error message on rows with errors (table title row was incorrectly using double quotes which broke html)
Begin converting Create Universe to use translated text.