@@ -1,3 +1,7 @@
+TheKabal (2 June 2013)
+--------------------------------------
+Fix the footer display that shows the count of players online to work on both pgsql & mysql - portable SQL!
+
 TheMightyDude (01 June 2013)
 --------------------------------------
 Fixed PHP Notice: Undefined variable: ships in includes/ibank_transfer.php on line 54
